Fixed an issue with the background not covering all cards and resizes cards to be smaller.

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ html, body, button {
 .content-container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
   background: linear-gradient(45deg, green, white);
 }
 .content {
