--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,6 +1,6 @@
 .card {
-  width: 10em;
-  height: 10em;
+  width: 8em;
+  height: 8em;
   display: flex;
   flex-direction: column;
   justify-content: center;
